# yaml-man

./: builder.py  errors.py  formatter.py  parser.py  setup.cfg  study.py
conf/: defaults.yaml  instantiate.yaml  macros.yaml  render_result.json  template.yaml  testcase.yaml
yamlman/: shell.py
yamlman/cli/: __init__.py  test.py
yamlman/modules/: base.py  volumes.py
