[metadata]
name = yaml-project
summary = A YAML file management tool,
          leverage macro/template/variable to manage yaml configurations
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/yaml-man
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Docker User
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    yamlman

data_files =
#    /etc/docker_trigger = etc/*
#    /usr/local/share/docker_trigger = testconf/*

[entry_points]
console_scripts =
    yp = yamlman.shell:main
yp =
    test = yamlman.cli.test:Render

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
